--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "~15.4.0",
     "react-native": "0.41.2",
     "react-native-camera": "https://github.com/lwansbrough/react-native-camera.git",
+    "react-native-svg": "^5.1.5",
     "rlp": "^2.0.0"
   },
   "devDependencies": {
